<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.damia.moviesapp.activities.AddPersonActivity">

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_person_first_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_person" />

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_person_last_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_day_of_birth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_first_name" />

    <EditText
        android:id="@+id/et_day_of_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_person_day_of_birth"
        android:inputType="textPersonName|date"
        android:onClick="showDatePickerDialog"
        android:focusable="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_save_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_last_name" />

    <Button
        android:id="@+id/btn_save_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_person_save"
        android:onClick="saveData"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_day_of_birth" />

    <TextView
        android:id="@+id/tv_add_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_person_text_view"
        app:layout_constraintBottom_toTopOf="@+id/et_first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
